Add store the tweet into local storage and add create profile page

--- a/src/App.css
+++ b/src/App.css
@@ -296,6 +296,12 @@ nav {
   margin-top: 0.6em;
 }
 
+.newtweet__buttons{
+  display: flex;
+  justify-content: flex-end;
+  gap: 6px;
+}
+
 .form--red {
   color: #f13c20;
 }
@@ -338,6 +344,10 @@ nav {
 
 .profile--bold {
   font-weight: 600;
+}
+
+.profile__image{
+  width: 200px;
 }
 
 @media only screen and (max-width: 1025px) {
